--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,7 @@ tokio = { version = "1.41.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.9.0"
+
+[lib]
+name = "sr_project"
+path = "src/lib.rs"
